--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -26,7 +26,8 @@
           ".js"
         ]
       }
-    ]
+    ],
+    "react/jsx-props-no-spreading": 0
   },
   "settings": {
     "import/resolver": {
