--- a/client/package.json
+++ b/client/package.json
@@ -7,15 +7,19 @@
     "axios": "^0.19.0",
     "eslint": "^6.3.0",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
     "react-redux": "^7.1.1",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "responsive-ant-menu": "^1.0.10",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,6 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app"
@@ -40,7 +45,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
   "devDependencies": {
     "babel-plugin-import": "^1.12.1",
     "eslint-config-airbnb": "^18.0.1",
