--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,7 +9,8 @@
   ],
   "parser": "babel-eslint",
   "env": {
-    "jest": true
+    "jest": true,
+    "browser": true
   },
   "globals": {
     "window": true,
