--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,14 @@
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "eslint": "^6.3.0",
+    "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-moment": "^0.9.2",
+    "react-new-window": "^0.1.2",
     "react-redux": "^7.1.1",
     "react-responsive": "^8.0.1",
     "react-router-dom": "^5.0.1",
@@ -29,7 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app"
