--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,6 +20,7 @@
     "prettier/prettier": "error",
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": 1,
+    "no-underscore-dangle": 0,
     "react/jsx-filename-extension": [
       1,
       {
