--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-masonry-css": "^1.0.12",
     "react-moment": "^0.9.2",
     "react-new-window": "^0.1.2",
     "react-redux": "^7.1.1",
@@ -56,7 +57,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
-    "prettier": "^1.18.2",
-    "react-masonry-css": "^1.0.12"
+    "prettier": "^1.18.2"
   }
 }
